# Resume-Generator

./: .env.example  .gitignore  README.md  activate_env.sh  main.py  pyproject.toml  requirements.txt  watch_templates.py
src/: compile_resume.py  firecrawl_client.py  scrape_job_posting.py
templates/: .gitkeep  yashwanth_resume_salesforce_administrator.tex  yashwanth_resume_salesforce_developer.tex  yashwanth_resume_software_engineer.tex
