[project]
name = "resume-generator"
version = "0.1.0"
description = "A Python script to compile LaTeX files into PDF format and scrape job postings"
requires-python = ">=3.11"
dependencies = [
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "watchdog==2.1.6",
]

[project.scripts]
scrape-job = "src.scrape_job_posting:main"
compile-resume = "src.compile_resume:main"
